[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "taxa"
version = "0.0.2"
authors = [
    {name = "Daniel Negrón", email = "daniel.negron@noblis.org"},
]
description = "Pythonic interface to interact with a custom subset of NCBI Taxonomy database."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["NCBI", "taxonomy", "ontology", "nomenclature", "database", "bioinformatics"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "sqlalchemy",
    "networkx"
]
